--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/ui": "^2.11.7",
     "@sanity/vision": "^3.72.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
